--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,11 @@ language: python
 python:
    - "3.4"
    - nightly
-script: "python test.py"
+   
+install:
+    - pip install -r requirements.txt
+    - pip install coveralls
+    - pip install nose
+    - pip install coverage
+    
+script: "python test.py" "nosetests --with-coverage"
