--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,5 @@ language: python
 python:
    - "3.4"
    - nightly
-   
-install:
-    - pip install -r requirements.txt
-    - pip install coveralls
-    - pip install nose
-    - pip install coverage
     
-script: "python test.py" "nosetests --with-coverage"
+script: "python test.py"
