--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,66 @@
-Flask==0.12.2
-Jinja2==2.9.6
-MarkupSafe==1.0
-Werkzeug==0.12.2
-click==6.7
-coverage==4.4.1
-itsdangerous==0.24
+BitTorrent==3.4.2
+PAM==0.4.2
+Pillow==2.3.0
+Twisted-Core==13.2.0
+Twisted-Web==13.2.0
+UniConvertor==1.1.4
+adium-theme-ubuntu==0.3.4
+apt-xapian-index==0.45
+argparse==1.2.1
+astroid==1.0.1
+chardet==2.0.1
+colorama==0.2.5
+command-not-found==0.3
+debtagshw==0.1
+defer==1.0.6
+deluge==1.3.6
+dirspec==13.10
+docopt==0.6.2
+duplicity==0.6.23
+gyp==0.1
+html5lib==0.999
+httplib2==0.8
+lockfile==0.8
+logilab-common==0.61.0
+lxml==3.3.3
+mercurial==2.8.2
+numpy==1.8.2
+oauthlib==0.6.1
+oneconf==0.3.7.14.04.1
+pbr==2.1.0
+peewee==2.9.2
+pexpect==3.1
+piston-mini-client==0.7.5
+pyFirmata==1.0.3
+pyOpenSSL==0.13
+pycrypto==2.6.1
+pycups==1.9.66
+pycurl==7.19.3
+pygame==1.9.1release
+pygobject==3.12.0
+pylint==1.1.0
+pyserial==2.6
+pysmbc==1.0.14.1
+python-apt==0.9.3.5ubuntu2
+python-debian==0.1.21-nmu2ubuntu2
+python-libtorrent==0.16.13
+pyxdg==0.25
+reportlab==3.0
+requests==2.2.1
+sessioninstaller==0.0.0
+six==1.10.0
+software-center-aptd-plugins==0.0.0
+stevedore==1.21.0
+system-service==0.1.6
+unity-lens-photos==1.0
+urllib3==1.7.1
+urwid==1.1.1
+vboxapi==1.0
+virtualenv==15.1.0
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.2
+wheel==0.24.0
+wsgiref==0.1.2
+xdiagnose==3.6.3build2
+youtube-dl==2014.02.17
+zope.interface==4.0.5
