--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: python
 python:
    - "3.4"
+   
+# command to install dependencies
+install: "pip install -r requirements.txt"
+
+before_install:
+    - pip install pytest-cov
+    - pip install coveralls
 
 script: 
     - "python test.py"
