--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,26 @@
-Flask==0.12.2
-Flask-WTF==0.14.2
-Jinja2==2.9.6
-MarkupSafe==1.0
-WTForms==2.1
-Werkzeug==0.12.2
 certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
 coverage==4.4.1
 coveralls==1.2.0
 docopt==0.6.2
+flake8==3.5.0
+Flask==0.12.2
+Flask-WTF==0.14.2
 gunicorn==19.7.1
 idna==2.6
 itsdangerous==0.24
+Jinja2==2.9.6
+MarkupSafe==1.0
+mccabe==0.6.1
 nose==1.3.7
+pew==1.1.0
+pipenv==8.3.2
+pycodestyle==2.3.1
+pyflakes==1.6.0
 requests==2.18.4
 urllib3==1.22
+virtualenv==15.1.0
+virtualenv-clone==0.2.6
+Werkzeug==0.12.2
+WTForms==2.1
