--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install: "pip install -r requirements.txt"
 
 before_install:
     - pip install pytest-cov
-    # - pip install coveralls
+    - pip install coveralls
 
 script: 
     # - "python test.py"
