added flask_bootstrap, ignored lib files from test coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 
 script: 
     # - "python test.py"
-    - nosetests --with-coverage --cover-package=test
+    - nosetests --with-coverage --cover-package=recipenote
 
 after_sucess:
     - coveralls
