--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,11 @@ click==6.7
 coverage==4.4.1
 coveralls==1.2.0
 docopt==0.6.2
+dominate==2.3.1
 flake8==3.5.0
 Flask==0.12.2
+Flask-Bootstrap==3.3.7.1
+Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 gunicorn==19.7.1
 idna==2.6
@@ -19,8 +22,10 @@ pipenv==8.3.2
 pycodestyle==2.3.1
 pyflakes==1.6.0
 requests==2.18.4
+SQLAlchemy==1.1.15
 urllib3==1.22
 virtualenv==15.1.0
 virtualenv-clone==0.2.6
+visitor==0.1.3
 Werkzeug==0.12.2
 WTForms==2.1
